--- a/config/server.yaml
+++ b/config/server.yaml
@@ -1,2 +1,11 @@
 HealthzBindAddress: "0.0.0.0:12345"
 MetricsBindAddress: "0.0.0.0:12346"
+  Telemetry:
+    Name: jaeger
+    ResourceAttributes:
+      - Key: env
+        Value: example
+    EndPoint: http://localhost:14268/api/traces
+    Jaeger:
+      Password: passwd
+      UserName: admin
