--- a/config/server.yaml
+++ b/config/server.yaml
@@ -6,10 +6,12 @@ telemetry:
   resourceAttributes:
     - key: env
       value: example
-  endPoint: "0.0.0.0:64665"
+  #use jaeger agent
+  endPoint: "http://0.0.0.0:14268/api/traces"
   Prometheus:
     MetricsBindAddress: "0.0.0.0:10251"
-#    EndPoint: http://localhost:14268/api/traces
-#    Jaeger:
-#      Password: passwd
-#      UserName: admin
+  #    EndPoint: http://localhost:14268/api/traces
+  Jaeger:
+    Mode: Collector
+    Password: passwd
+    UserName: admin
